:hammer: Fix Overlay z-index

--- a/src/settings/design/_layout.scss
+++ b/src/settings/design/_layout.scss
@@ -37,7 +37,7 @@ $sidebar-minwidth:                   250px !default;
 $sidebar-maxwidth:                   60vw !default;
 
 $overlay-background:                 rgba($black, .75) !default;
-$overlay-zindex:                     11 !default;
+$overlay-zindex:                     19 !default;
 $overlay-transition:                 opacity .35s ease-in-out, visibility .35s ease-in-out !default;
 
 //
